@@ -14,7 +14,12 @@ Dockerfile:
   * Added hmmsearch to image
   * Updated to python 3.8
   * Updated to hmmer version 3.3
+  * Added download for Zenodo files
 
 Package:
   * New module HMMER with hmmsearch as function
   * scripts: changed hmmscan to hmmsearch
+  * Added Zenodo support for HMMs
+
+Python Scripts:
+  * Changed decision tree
